[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGHCND"
version = "0.0.1"

description = "Aggregate and plot NOAA GHCND weather data"
keywords = [ "NOAA", "GHCND", "Weather", "Temperature", "Plot", "Statistics" ]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

authors = [
  { name="Ryan Nelson", email="rnelsonchem@gmail.com" },
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3',
]

requires-python = ">=3.10"
dependencies = [
        'pandas>=1.5',
        'pyarrow>=8.0',
        'openpyxl>=3.0',
        'requests>=2.20',
        'scipy>=1.10',
        'matplotlib>=3.7',
        'tqdm>=4.60',
        ]
        
[project.urls]
"Homepage" = "https://github.com/rnelsonchem/pyGHCND"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [ 
    "pytest", 
]

dev = [
    "pytest", 
    "build", 
    "ipython",
    "twine",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
]
